css fixes for overflow of content

--- a/css/main.css
+++ b/css/main.css
@@ -335,6 +335,12 @@ img {
 }
 
 /* ITEMS */
+
+/* fix for big images uploaded in the text */
+section.item div.txt {
+    overflow:hidden;
+}
+
 .item {
     background-color: #EEE;
     border:  1px solid #CCC;
@@ -573,6 +579,12 @@ footer p, footer p a {
     display:inline;
 }
 
+/* fix the overflow for long filenames and little width of browser */
+#bigUploadFile {
+    max-width:250px;
+    overflow: hidden;
+}
+
 .bigUpload .bigUploadContainer {
 	max-width: 350px;
 	padding: 20px 30px 30px;
@@ -580,11 +592,7 @@ footer p, footer p a {
 	margin-top:15px;
 	background-color: #ffffff;
 	border: 1px solid #e5e5e5;
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
 	border-radius: 5px;
-	-moz-box-shadow: 0 1px 2px rgba(0,0,0,.05);
-	-webkit-box-shadow: 0 1px 2px rgba(0,0,0,.05);
 	box-shadow: 0 1px 2px rgba(0,0,0,.05);
 	text-align: center;
 }
